these_pasteur/exemples/DoEsteRML/test/good/loop2.strl
loop
  signal s in
    present s then print "ERROR" else print "OK" end;
    pause topck;
    emit s
  end
end.