these_pasteur/exemples/DoEsteRML/test/bad/loop4.strl
signal s in
  loop
    emit s; pause topck;
    present s then print "OK" else print "ERROR" end
  end
end.